prevent forecast chart from overflowing

--- a/Teleopti.Ccc.Web/Teleopti.Ccc.Web/WFM/css/_forecasting.scss
+++ b/Teleopti.Ccc.Web/Teleopti.Ccc.Web/WFM/css/_forecasting.scss
@@ -129,3 +129,7 @@
 	transition: .1s all ease-in-out;
   stroke-width: 5!important;
 }
+
+forecast-result-chart >.c3 > svg{
+	max-width: 100%;
+}
